--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 calculate to int functions for light blocks
 debug config for decay rate etc
 fog is affected by sun height in worlds with a sun
+finish pandora config
